@@ -8,6 +8,7 @@ Version 1.9.4
 - BUG: Crash in log dialog when repo root
        isn't readable. (Ivan Zhakov, Stefan)
 - BUG: Repo browser slow to close. (Stefan)
+- BUG: CodeCollaborator was not properly detected. (Stefan)
 
 Version 1.9.3
 - BUG: The DEL key didn't work in the filter box
